# timing_task

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
cmake/: aarch64-linux-gnu.cmake
docs/: design.h  design.md
examples/: demo.c
include/: timing_task.h
src/: timing_task.c
tests/: runner.c  test_task.c  unity.h
